# make10

./: .gitignore  CLAUDE.md  LICENSE  README.md  make10.py  make10_legacy.py  make10_origin.py  make10memo.txt  pyproject.toml
docs/: index.html  manifest.json  sw.js
src/make10/: __init__.py  cli.py  core.py
tests/: test_core.py
